db setup, all CRUD APIs (not working yet), openyaml update, jackson annotations
